--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@ footer {
       <h1>KHUSHI GUPTA<pre>ASPIRING WEB DEVELOPER
              </pre></h1>
              
-          <img src="/portpic.jpeg" alt="photo">
+          <img src="portpic.jpeg" alt="photo">
            
         </div>
         <hr>
